--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
         
     - name: Build Docker Image
       run: |
-        docker run -t jaoh/docker-graphql:0.0.2 .
+        docker build -t jaoh/docker-graphql:0.0.2 .
         
     - name: Push Docker Image
       run: |
